Fix admin navbar item, remove duplicate title, make dark mode buttons more clear, and make dark mode cards more clear

--- a/app/assets/stylesheets/_dark.scss
+++ b/app/assets/stylesheets/_dark.scss
@@ -16,6 +16,7 @@ html[data-dark='true'] {
     --shadow-sm: 0 2px 2px rgba(0, 0, 0, 0.04);
     --shadow-border-sm: var(--shadow-border), var(--shadow-sm);
     --shadow-border-md: var(--shadow-border), var(--shadow-md);
+    --shadow-border-lg: var(--shadow-border), var(--shadow-lg);
   }
 
   input[type='date'],
@@ -162,7 +163,6 @@ html[data-dark='true'] {
   }
 
   .modal,
-  .card,
   .menu__content {
     box-shadow:
       -2px -4px 8px rgba(0, 0, 0, 0.125),
@@ -301,27 +301,50 @@ html[data-dark='true'] {
 
   .btn {
     background-color: $darkless;
+    &:hover {
+      background-color: lighten($darkless, 7.5%);
+    }
   }
   input[type='submit'],
   .btn.bg-info {
     background-color: rgba(map-get($palette, info), 0.75);
+    &:hover {
+      background-color: rgba(lighten(map-get($palette, info), 7.5%), 0.75);
+    }
   }
   .btn.bg-primary {
     background-color: rgba(map-get($palette, primary), 0.75);
+    &:hover {
+      background-color: rgba(lighten(map-get($palette, primary), 7.5%), 0.75);
+    }
   }
   .btn.bg-accent {
     background-color: rgba(map-get($palette, accent), 0.75);
+    color: map-get($palette, smoke) !important;
+    &:hover {
+      background-color: rgba(lighten(map-get($palette, accent), 7.5%), 0.75);
+    }
   }
   .btn.bg-success {
     background-color: rgba(map-get($palette, success), 0.75);
+    &:hover {
+      background-color: rgba(lighten(map-get($palette, success), 10%), 0.75);
+    }
   }
   .btn.bg-warning {
     background-color: rgba(map-get($palette, warning), 0.75);
+    color: map-get($palette, smoke) !important;
+    &:hover {
+      background-color: rgba(lighten(map-get($palette, warning), 7.5%), 0.75);
+    }
   }
   .btn.btn--destroy,
   .btn.bg-error {
     background-color: rgba(map-get($palette, error), 0.75) !important;
     color: map-get($palette, smoke) !important;
+    &:hover {
+      background-color: rgba(lighten(map-get($palette, error), 7.5%), 0.75) !important;
+    }
   }
 
   .badge {
